--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
   "name": "library-service",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
     "start": "node ./bin/www"
   },
   "dependencies": {
     "body-parser": "~1.17.1",
+    "config": "^1.25.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.3",
     "express": "~4.15.2",
     "jade": "~1.11.0",
+    "mongoose": "^4.9.3",
     "morgan": "~1.8.1",
     "serve-favicon": "~2.4.2"
   }
