--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "debug": "~2.6.3",
     "express": "~4.15.2",
     "jade": "~1.11.0",
+    "jsonwebtoken": "^7.3.0",
     "mongoose": "^4.9.3",
     "morgan": "~1.8.1",
     "serve-favicon": "~2.4.2"
