--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "test": "mocha routes/**/*.spec.js"
   },
   "dependencies": {
     "body-parser": "~1.17.1",
@@ -11,9 +12,11 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.3",
     "express": "~4.15.2",
-    "jade": "~1.11.0",
     "mongoose": "^4.9.3",
-    "morgan": "~1.8.1",
-    "serve-favicon": "~2.4.2"
+    "morgan": "~1.8.1"
+  },
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "mocha": "^3.2.0"
   }
 }
