--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "test": "mocha routes/**/*.spec.js"
+    "test": "set NODE_ENV=test&mocha routes/**/*.spec.js"
   },
   "dependencies": {
     "body-parser": "~1.17.1",
