--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "library-service",
-  "version": "0.0.1",
+  "version": "0.2.0",
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "test": "set NODE_ENV=test&mocha routes/**/*.spec.js"
+    "test": "set NODE_ENV=test&mocha lib/**/*.spec.js"
   },
   "dependencies": {
     "body-parser": "~1.17.1",
